--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-    "name": "yelpcamp",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "nodemon app.js"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "cloudinary": "^1.26.3",
-        "connect-flash": "^0.1.1",
-        "dotenv": "^10.0.0",
-        "ejs": "^3.1.6",
-        "ejs-mate": "^3.0.0",
-        "express": "^4.17.1",
-        "express-session": "^1.17.2",
-        "joi": "^17.4.1",
-        "method-override": "^3.0.0",
-        "mongoose": "^5.13.4",
-        "multer": "^1.4.3",
-        "multer-storage-cloudinary": "^4.0.0",
-        "passport": "^0.4.1",
-        "passport-local": "^1.0.0",
-        "passport-local-mongoose": "^6.1.0"
-    }
+   "name": "yelpcamp",
+   "version": "1.0.0",
+   "description": "",
+   "main": "app.js",
+   "scripts": {
+      "start": "nodemon app.js"
+   },
+   "author": "",
+   "license": "ISC",
+   "dependencies": {
+      "@mapbox/mapbox-sdk": "^0.13.1",
+      "cloudinary": "^1.26.3",
+      "connect-flash": "^0.1.1",
+      "dotenv": "^10.0.0",
+      "ejs": "^3.1.6",
+      "ejs-mate": "^3.0.0",
+      "express": "^4.17.1",
+      "express-session": "^1.17.2",
+      "joi": "^17.4.1",
+      "method-override": "^3.0.0",
+      "mongoose": "^5.13.4",
+      "multer": "^1.4.3",
+      "multer-storage-cloudinary": "^4.0.0",
+      "passport": "^0.4.1",
+      "passport-local": "^1.0.0",
+      "passport-local-mongoose": "^6.1.0"
+   }
 }
