--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "author": "",
     "license": "ISC",
     "engines": {
-        "node": ">=18.18.0 <19.0.0"
+        "node": "18.18.0"
     },
     "dependencies": {
         "@mapbox/mapbox-sdk": "^0.13.1",
